@@ -30,6 +30,7 @@ Changelog
  * Fix: `{% image ... as var %}` now clears the context variable when passed None as an image (Maylon Pedroso)
  * Fix: `refresh_index` method on Elasticsearch no longer fails (Lars van de Kerkhof)
  * Fix: Document tags no longer fail to update when replacing the document file at the same time (Matt Westcott)
+ * Fix: Prevent error from very tall / wide images being resized to 0 pixels (Fidel Ramos)
 
 
 2.8 (03.02.2020)
